# AirSim-1

./: .travis.yml  build.cmd  build.sh  clean.cmd  setup.sh
AirLib/: AirLib.vcxproj
AirLib/include/common/: AirSimSettings.hpp  Common.hpp  CommonStructs.hpp  VectorMath.hpp
AirLib/include/physics/: FastPhysicsEngine.hpp  JSBSimPhysicsEngine.hpp
AirLib/include/sensors/distance/: DistanceSimpleParams.hpp
AirLib/include/sensors/lidar/: LidarSimpleParams.hpp
AirLib/include/vehicles/fixedwing/: AircraftParams.hpp  Airplane.hpp  ControlSurface.hpp  DynamicForces.hpp  DynamicParams.hpp  FixedWingParams.hpp  FixedWingParamsFactory.hpp  FixedWingPhysicsBody.hpp
JSBSimAssets/aircraft/c172x/: c1722_1.xml  c172x.xml
PythonClient/: PythonClient.pyproj
PythonClient/JSBSim/: JSBSimBasicCommands.py  JSBSimServer.py  simple_update.py
PythonClient/JSBSim/old_implementation/: JSBSimDemo.py  JSBSim_utils.py  demo.py  simConnect.py  test_input_socket.py
PythonClient/airsim/: client.py  types.py
PythonClient/computer_vision/: getpos.py
PythonClient/fixedwing/: hello_plane.py
PythonClient/imitation_learning/: cook_data.py
Unreal/Environments/Blocks/: Blocks.code-workspace  Blocks.uproject
api_docs/doctrees/: environment.pickle  index.doctree
cmake/: CMakeLists.txt
cmake/AirLib/: CMakeLists.txt
cmake/AirLibUnitTests/: CMakeLists.txt
cmake/DroneServer/: CMakeLists.txt
cmake/DroneShell/: CMakeLists.txt
cmake/HelloCar/: CMakeLists.txt
cmake/HelloDrone/: CMakeLists.txt
cmake/cmake-modules/: CommonSetup.cmake
cmake/jsbsim/: CMakeLists.txt
(+89 files in other folders)
